tests/snapshots/ui_folder__backup_root.snap
---
source: tests/ui_folder.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project
  Jul 2026        Aug                         Sep                              now
  ● ·   ○  ○ ○ ○  · ○   ○  ○·    ○ ·  ○ ·  ●    ○· ·○·○ · ○ ·  ·○  · ·○ ·  ·  ┊ ○ docs/  ○ project/
                                                                      ▲                    − 1× +

 now  ~1 unsaved      │ ▸ docs/                                │ docs/
   ┄ 2 unchanged ┄    │ ▸ scripts/                             │
▶Sep 27 08:52 ~1      │ ▸ src/                              ~1 │ ¶ notes.md
   ┄ 2 unchanged ┄    │ ○ go.mod                      27 B     │
 Sep 20 20:35 ~1      │ ¶ README.md                   15 B     │
   ┄ 2 unchanged ┄    │                                        │
 Sep 13 20:51 ~2      │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Sep 09 19:23 ~1      │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Sep 06 18:03 +1~3−1  │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Sep 02 20:16 ~1      │                                        │
 Aug 28 13:10 ~1      │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
 Jul 20 12:00 ~1      │                                        │
   ┄ 1 unchanged ┄    │                                        │
 NOR  Sep 27 08:52  c177b849  project/ ~1                                               1/5  ? help
