tests/snapshots/ui_folder__boundary_message.snap
---
source: tests/ui_folder.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              now
  ● ·   ·  ○ ○ ●  · ●   ○  ○·    ○ ·  ○ ·  ·    ○· ·●·○ · ○ ·  ·○  · ·○ ·  ·  ┊ ○ api/  ○ src/
  ▲                                                                                        − 1× +

 now  ~1 unsaved      │   ..                     ╭────────────────────────────────────────────────╮
   ┄ 2 unchanged ┄    │ ▸ api/                   │ This is the oldest version of this folder.     │
 Sep 27 08:52 ~1      │ ▸ models/                ╰────────────────────────────────────────────────╯
   ┄ 2 unchanged ┄    │ ◇ config.go                   47 B  +  │ ◇ routes.go                      +
 Sep 20 20:35 ~1      │ ◇ legacy.go                   62 B  +  │
   ┄ 2 unchanged ┄    │ ◇ main.go                     37 B  +  │
 Sep 13 20:51 ~2      │ ◇ util.go                     72 B  +  │
   ┄ 1 unchanged ┄    │                                        │
 Sep 09 19:23 ~1      │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Sep 06 18:03 +1~3−1  │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Sep 02 20:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
▶Jul 14 09:00 +7      │                                        │
                      │                                        │
 NOR  Jul 14 09:00  1ce978c9  src/ +7                                                   1/6  ? help
