tests/snapshots/ui_folder__deleted_shown_11.snap
---
source: tests/ui_folder.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src                                                   ◀ version 13 of 15 ▶
  Jul 2026        Aug                         Sep                              now
  ● ·   ·  ○ ○ ○  · ○   ○  ○·    ○ ·  ○ ·  ·    ○· ·○ ○   ○     ○     ○       ┊ ○ legacy.go  ○ src/
                                                          ▲                                − 1× +

 now  ~1 unsaved      │   ..                                   │ legacy.go · deleted     ⇥ content
   ┄ 2 unchanged ┄    │ ▸ api/                                 │ last version Jul 14, gone Sep 06
 Sep 27 08:52 ~1      │ ▸ models/                         ~1   │
   ┄ 2 unchanged ┄    │ ◇ config.go                 89 B       │   1  package main
 Sep 20 20:35 ~1      │ ◇ feature.go                13 B  gone │   2
   ┄ 2 unchanged ┄    │ ◇ legacy.go                 62 B  gone │   3  // Deprecated: use server.go
▶Sep 13 20:51 ~2      │ ◇ main.go                  108 B       │   4  func serveOld() {}
   ┄ 1 unchanged ┄    │ ◇ server.go                 30 B       │
 Sep 09 19:23 ~1      │ ◇ util.go                  104 B  ~    │
   ┄ 1 unchanged ┄    │                                        │
 Sep 06 18:03 +1~3−1  │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Sep 02 20:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │                                        │
                      │                                        │
 NOR  Sep 13 20:51  f59afa23  src/ ~2                                     Jul 14 09:00  5/8  ? help
