tests/snapshots/ui_folder__folder_preview.snap
---
source: tests/ui_folder.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              now
  ● ·   ·  ○ ○ ●  · ●   ○  ○·    ○ ·  ○ ·  ·    ○· ·●·○ · ○ ·  ·○  · ·○ ·  ·  ┊ ○ api/  ○ src/
                                                    ▲                                      − 1× +

 now  ~1 unsaved      │   ..                                   │ api/
   ┄ 2 unchanged ┄    │ ▸ api/                              ~1 │
 Sep 27 08:52 ~1      │ ▸ models/                              │ ◇ handlers.go
   ┄ 2 unchanged ┄    │ ◇ config.go                   89 B  ~  │ ◇ middleware.go
 Sep 20 20:35 ~1      │ ◇ legacy.go                   62 B  −  │ ◇ routes.go                      ~
   ┄ 2 unchanged ┄    │ ◇ main.go                     96 B  ~  │
 Sep 13 20:51 ~2      │ ◇ server.go                   30 B  +  │
   ┄ 1 unchanged ┄    │ ◇ util.go                     94 B     │
 Sep 09 19:23 ~1      │                                        │
   ┄ 1 unchanged ┄    │                                        │
▶Sep 06 18:03 +1~3−1  │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Sep 02 20:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │                                        │
                      │   1 deleted · . to show                │
 NOR  Sep 06 18:03  7ff3fd58  src/ +1 ~3 −1                                             1/7  ? help
