tests/snapshots/ui_folder__preview_vs_disk_03.snap
---
source: tests/ui_folder.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              now
  ● ·   ·  ● ○ ○  · ●   ○  ○·    ● ·  ○ ·  ·    ●· ·●·● · ○ ·  ·○  · ·○ ·  ·  ┊ ● main.go  ○ src/
                                                      ▲                                    − 1× +

 now  ~1 unsaved      │   ..                                   │ main.go · v7/7 · 108 B  ⇥ vs disk
   ┄ 2 unchanged ┄    │ ▸ api/                                 │ changed here · + new line · − remo…
 Sep 27 08:52 ~1      │ ▸ models/                              │
   ┄ 2 unchanged ┄    │ ◇ config.go                    89 B    │ ┄ line 9
 Sep 20 20:35 ~1      │ ◇ main.go                     108 B  ~ │   // signals
   ┄ 2 unchanged ┄    │ ◇ server.go                    30 B    │   // serve
 Sep 13 20:51 ~2      │ ◇ util.go                      94 B    │   // shutdown
   ┄ 1 unchanged ┄    │                                        │ + // unsaved edit
▶Sep 09 19:23 ~1      │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Sep 06 18:03 +1~3−1  │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Sep 02 20:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │                                        │
                      │   2 deleted · . to show                │
 NOR  Sep 09 19:23  811fc3af  src/ ~1                                     Sep 09 19:23  4/6  ? help
